If a backup is taken on a system that uses ~/mail for user folders and restored on one using ~/Maildir, they will be properly converted during the restore (and vice-versa).
When a domain is restored on a new system, the MySQL socket file path and options that reference the home directory in its php.ini file are updated to match the new system.
Preserve encrypted passwords when backing up domains, in case they don't match the plaintext password stored by Virtualmin. Also, have validation report an error in the case of a mismatch.
Re-organized the custom links page to move editing of each link into a separate form, and allow links to be limited to virtual servers with some feature enabled.
---- Changes since 3.61 ----
Updated the Nucleus script installer to version 3.33, Xoops to 2.0.18.2, SugarCRM to 5.1.0, OpenX to 2.6.1, phpMyAdmin to 2.11.9, phpPgAdmin to 4.2.1, WordPress MU to 2.6.1, Magento to 1.0.19870.6, Django to 1.0, and Movable Type to 4.21.
Added a button to edit pages as text (without the HTML editor) to the Edit Web Pages feature.
The configuration check now detects a missing or incorrect suexec, to easier find problems with the base directory that will break PHP and CGI scripts.
Added a new sort mode (used by default for new installs) to order virtual servers by domain name, but with sub-servers indented under them.
The frequency of script update notifications and whether to send the same notification twice can now be configured on the Script Installers configuration page.
Resellers can now read mail in all mailboxes under domains they control, if allowed on the Module Config page under 'Extra modules'.
Included domains for SPF for new virtual servers can now be set in server templates.
Added a button to the Edit Mailbox page for logging into Usermin as a user without having to enter their password. Requires Webmin 1.440 or later though.