@@ -1913,6 +1913,7 @@ backup_vscheds=Scheduled Virtualmin backups
 backup_virtualmin=Virtualmin settings to also backup
 backup_webmin=Backing up Webmin ACL files ..
 backup_webminfailed=.. tar failed : $1
+backup_etarcmd=The <tt>tar</tt> command was not found on your system!
 backup_eftptest=Failed to connect to FTP server : $1
 backup_escptest=Failed to connect to SSH server : $1
 backup_edirtest=Cannot backup multiple domains to $1, as it is not a directory
