@@ -979,3 +979,4 @@ The frequency of script update notifications and whether to send the same notifi
 Resellers can now read mail in all mailboxes under domains they control, if allowed on the Module Config page under 'Extra modules'.
 Included domains for SPF for new virtual servers can now be set in server templates.
 Added a button to the Edit Mailbox page for logging into Usermin as a user without having to enter their password. Requires Webmin 1.440 or later though.
+On FreeBSD, the Gnu tar command gtar is used in preference to regular tar when installed. This allows incremental backups to be performed.
